# custom-libraries

llama-starter/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  METADATA-FIX.md  Makefile  PUBLISH-REMOTE.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py  test_metadata.py
llama-starter/.github/workflows/: ci.yml
llama-starter/app/: __init__.py  cli.py
llama-starter/common/: __init__.py  config.py  rag.py  service.py  utils.py
llama-starter/config/: __init__.py  defaults.yaml  env.py
llama-starter/docs/: architecture.md  configuration.md
llama-starter/examples/: cli_usage.md  library_usage.py
llama-starter/examples/demo-corpus/: deep-learning.md  ml-intro.md  nlp-overview.txt  rag-explained.txt
llama-starter/scripts/: bootstrap.sh  bump_version.py
llama-starter/src/llama_rag/: __init__.py  config.py  factories.py  rag.py  service.py
llama-starter/tests/: __init__.py  conftest.py  integration_test_rag.py  test_factories.py  test_rag_incremental.py  test_service.py
